# permissioned-markets-quickstart

./: .gitignore  .gitmodules  .travis.yml  Anchor.toml  Makefile  README.md  package.json
programs/permissioned-markets/: Cargo.toml
programs/permissioned-markets/src/: lib.rs
scripts/: list-market.js  localnet.sh  trade-bot.js
tests/: permissioned-markets.js
tests/utils/: market-lister.js  market-maker.js  market-proxy.js
