[package]
name = "permissioned-markets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "permissioned_markets"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
#anchor-lang = { git = "https://github.com/project-serum/anchor" }
#anchor-spl = { git = "https://github.com/project-serum/anchor" }
anchor-lang = { path = "../../../anchor/lang" }
anchor-spl = { path = "../../../anchor/spl" }
solana-program = "1.7.4"
